examples/kitchen-sink/src/pages/errors/client-component/cc-throws-in-browser.page.tsx
import CCThrowsInBrowser from "./cc-throws-in-browser";

export default function Page() {
  return (
    <div>
      <CCThrowsInBrowser />
    </div>
  );
}
